# torrentsnail

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  plan.md
bencode/: Cargo.toml
bencode/src/: decoder.rs  encoder.rs  error.rs  lib.rs  ser.rs  value.rs
examples/: basic.rs  download.rs  http.rs
openapi/: api.yaml
snail/: Cargo.toml
snail/src/: error.rs  host_port.rs  lib.rs  magnet.rs
snail/src/app/: app.rs  handler.rs  models.rs
snail/src/config/: mod.rs
snail/src/dht/: mod.rs  node.rs  token.rs  types.rs
snail/src/lsd/: mod.rs
snail/src/message/: mod.rs
snail/src/session/: action.rs  action_handler.rs  builder.rs  constant.rs  handler.rs  manager.rs  meta.rs  mod.rs  peer.rs  persistence.rs  piece.rs  session.rs  session_builder.rs  session_status.rs  storage.rs  types.rs  utils.rs
snail/src/torrent/: file.rs  hash.rs
snail/src/tracker/: mod.rs  types.rs
snail/src/utils/: mod.rs
src/: addr.rs  error.rs  lib.rs  magnet.rs  main.rs
src/app/: app.rs  handler.rs  mod.rs  models.rs
src/app/middleware/: auth.rs
src/bencode/: de.rs  mod.rs
src/bt/: file.rs  mod.rs  peer.rs  piece.rs  session.rs  types.rs
src/config/: mod.rs
src/dht/: Cargo.toml  bucket.rs  mod.rs  node.rs  search.rs  storage.rs  token.rs  types.rs
src/limiter/: mod.rs
src/lsd/: mod.rs
src/message/: mod.rs
src/proxy/socks5/: client.rs
src/ratelimiter/: mod.rs
src/session/: file.rs  handler.rs  manager.rs  peer.rs  session.rs  utils.rs
src/supervisor/: mod.rs  peer.rs  piece.rs  session.rs  types.rs
src/torrent/: file.rs  hash.rs  mod.rs
src/tracker/: mod.rs  types.rs
tests/ancient-poetry/: ancient-poetry.torrent  将进酒（李白）.txt  春江花月夜 (張若虛).txt
tests/http/: bootstrap.bash  hurl.env  query-sessions.hurl
torrentsnail/: Cargo.toml
torrentsnail/src/: main.rs
torrentsnail/templates/: error.html  index.html
(+21 files in other folders)
