[package]
name = "dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.3", features = ["macros", "multipart"] }
bincode = "1.3.3"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
num = { version = "0.4.0", features = ["num-bigint"] }
rand = "0.8.5"
ring = "0.16.20"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = "0.7.4"
torrent = { path = "../torrent" }
bencode = { path = "../bencode" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde_bytes = "0.11.8"
hex = "0.4.3"
thiserror = "1.0.38"
